--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint:eslint": "eslint --ignore-path .gitignore",
     "lint:js": "npm run lint:eslint -- . ",
     "lint:staged": "lint-staged",
-    "coveralls": "cat ./coverage/lcov/lcov.info | coveralls"
+    "test-travis": "node ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- src/tests/**/*.js -R spec --timeout 2000000",
+    "coveralls": "npm run test-travis && cat ./coverage/lcov.info | coveralls"
   },
   "repository": {
     "type": "git",
@@ -36,11 +37,12 @@
     "eslint-plugin-jsx-a11y": "1.2.0",
     "eslint-plugin-react": "5.1.1",
     "ethereumjs-testrpc": "^3.0.2",
-    "ethjs-util": "0.0.2",
     "ethjs-abi": "0.0.1",
-    "ethjs-query": "0.0.2",
+    "ethjs-query": "0.0.4",
     "ethjs-sha3": "0.0.1",
+    "ethjs-util": "0.0.2",
     "eventsource-polyfill": "0.9.6",
+    "istanbul": "0.4.5",
     "lint-staged": "1.0.1",
     "mocha": "3.1.2",
     "pre-commit": "1.1.3"
