--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ethjs-contract",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "description": "A simple contract object for the Ethereum RPC.",
   "main": "src/index.js",
   "scripts": {
@@ -36,7 +36,7 @@
     "eslint-plugin-import": "1.8.0",
     "eslint-plugin-jsx-a11y": "1.2.0",
     "eslint-plugin-react": "5.1.1",
-    "ethereumjs-testrpc": "^3.0.2",
+    "ethereumjs-testrpc": "3.0.2",
     "ethjs-abi": "0.0.1",
     "ethjs-provider-http": "0.0.1",
     "ethjs-query": "0.0.4",
