--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "ethjs-contract",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "A simple contract object for the Ethereum RPC.",
   "main": "lib/index.js",
-  "browser": "dist/ethjs-contract.js",
   "files": [
     "dist",
     "internals",
@@ -37,52 +36,22 @@
   },
   "babel": {
     "plugins": [
-      [
-        "transform-es2015-template-literals",
-        {
-          "loose": true
-        }
-      ],
+      ["transform-es2015-template-literals", { "loose": true }],
       "transform-es2015-literals",
       "transform-es2015-function-name",
       "transform-es2015-arrow-functions",
       "transform-es2015-block-scoped-functions",
-      [
-        "transform-es2015-classes",
-        {
-          "loose": true
-        }
-      ],
+      ["transform-es2015-classes", { "loose": true }],
       "transform-es2015-object-super",
       "transform-es2015-shorthand-properties",
-      [
-        "transform-es2015-computed-properties",
-        {
-          "loose": true
-        }
-      ],
-      [
-        "transform-es2015-for-of",
-        {
-          "loose": true
-        }
-      ],
+      ["transform-es2015-computed-properties", { "loose": true }],
+      ["transform-es2015-for-of", { "loose": true }],
       "transform-es2015-sticky-regex",
       "transform-es2015-unicode-regex",
       "check-es2015-constants",
-      [
-        "transform-es2015-spread",
-        {
-          "loose": true
-        }
-      ],
+      ["transform-es2015-spread", { "loose": true }],
       "transform-es2015-parameters",
-      [
-        "transform-es2015-destructuring",
-        {
-          "loose": true
-        }
-      ],
+      ["transform-es2015-destructuring", { "loose": true }],
       "transform-es2015-block-scoping",
       "transform-object-rest-spread",
       "transform-es3-member-expression-literals",
@@ -91,21 +60,16 @@
     "env": {
       "commonjs": {
         "plugins": [
-          [
-            "transform-es2015-modules-commonjs",
-            {
-              "loose": true
-            }
-          ]
+          ["transform-es2015-modules-commonjs", { "loose": true }]
         ]
       }
     }
   },
   "dependencies": {
-    "ethjs-abi": "0.1.2",
-    "ethjs-filter": "0.1.4",
-    "ethjs-sha3": "0.1.1",
-    "ethjs-util": "0.1.2"
+    "ethjs-abi": "0.1.4",
+    "ethjs-filter": "0.1.5",
+    "ethjs-sha3": "0.1.2",
+    "ethjs-util": "0.1.3"
   },
   "devDependencies": {
     "babel-cli": "6.18.0",
@@ -145,11 +109,8 @@
     "eslint-plugin-jsx-a11y": "1.2.0",
     "eslint-plugin-react": "5.1.1",
     "ethereumjs-testrpc": "3.0.2",
-    "ethjs-abi": "0.0.1",
-    "ethjs-provider-http": "0.0.1",
-    "ethjs-query": "^0.1.0",
-    "ethjs-sha3": "0.0.1",
-    "ethjs-util": "0.0.2",
+    "ethjs-provider-http": "0.1.3",
+    "ethjs-query": "0.1.3",
     "eventsource-polyfill": "0.9.6",
     "istanbul": "0.4.5",
     "json-loader": "0.5.4",
