--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ethjs-contract",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "A simple contract object for the Ethereum RPC.",
   "main": "lib/index.js",
   "files": [
@@ -66,9 +66,9 @@
     }
   },
   "dependencies": {
-    "ethjs-abi": "0.1.4",
+    "ethjs-abi": "0.1.5",
     "ethjs-filter": "0.1.5",
-    "ethjs-sha3": "0.1.2",
+    "js-sha3": "0.5.5",
     "ethjs-util": "0.1.3"
   },
   "devDependencies": {
