--- a/package.json
+++ b/package.json
@@ -1,57 +1,56 @@
 {
-  "name": "ethjs-contract",
-  "version": "0.1.7",
-  "description": "A simple contract object for the Ethereum RPC.",
-  "main": "lib/index.js",
-  "files": [
-    "dist",
-    "internals",
-    "lib",
-    "src"
-  ],
-  "scripts": {
-    "start": "npm test",
-    "release": "npmpub",
-    "pretest": "npm run lint",
-    "prepublish": "npm run build",
-    "prebuild": "npm run build:clean && npm run test",
-    "build:clean": "npm run test:clean && rimraf ./dist",
-    "build:commonjs": "cross-env BABEL_ENV=commonjs babel src --out-dir lib --copy-files",
-    "build:umd": "cross-env BABEL_ENV=commonjs NODE_ENV=development webpack --config ./internals/webpack/webpack.config.js ./lib/index.js --progress",
-    "build:umd:min": "cross-env BABEL_ENV=commonjs NODE_ENV=production webpack --config ./internals/webpack/webpack.config.js ./lib/index.js --progress",
-    "build": "npm run build:commonjs && npm run test:lib && npm run build:umd && npm run build:umd:min",
-    "lint": "npm run lint:js",
-    "lint:eslint": "eslint --ignore-path .gitignore --ignore-pattern **/**.min.js",
-    "lint:js": "npm run lint:eslint -- . ",
-    "lint:staged": "lint-staged",
-    "test:clean": "rimraf ./coverage",
-    "test": "mocha ./src/tests/**/*.js -R spec --timeout 2000000",
-    "test:lib": "mocha ./lib/tests/**/*.js -R spec --timeout 2000000",
-    "test-travis": "node ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- src/tests/**/*.js -R spec --timeout 2000000",
-    "coveralls": "npm run test-travis && cat ./coverage/lcov.info | coveralls"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/ethjs/ethjs-contract.git"
+  "author": {
+    "name": "Nick Dodson",
+    "email": "nick.dodson@consensys.net"
   },
   "babel": {
     "plugins": [
-      ["transform-es2015-template-literals", { "loose": true }],
+      [
+        "transform-es2015-template-literals",
+        {
+          "loose": true
+        }
+      ],
       "transform-es2015-literals",
       "transform-es2015-function-name",
       "transform-es2015-arrow-functions",
       "transform-es2015-block-scoped-functions",
-      ["transform-es2015-classes", { "loose": true }],
+      [
+        "transform-es2015-classes",
+        {
+          "loose": true
+        }
+      ],
       "transform-es2015-object-super",
       "transform-es2015-shorthand-properties",
-      ["transform-es2015-computed-properties", { "loose": true }],
-      ["transform-es2015-for-of", { "loose": true }],
+      [
+        "transform-es2015-computed-properties",
+        {
+          "loose": true
+        }
+      ],
+      [
+        "transform-es2015-for-of",
+        {
+          "loose": true
+        }
+      ],
       "transform-es2015-sticky-regex",
       "transform-es2015-unicode-regex",
       "check-es2015-constants",
-      ["transform-es2015-spread", { "loose": true }],
+      [
+        "transform-es2015-spread",
+        {
+          "loose": true
+        }
+      ],
       "transform-es2015-parameters",
-      ["transform-es2015-destructuring", { "loose": true }],
+      [
+        "transform-es2015-destructuring",
+        {
+          "loose": true
+        }
+      ],
       "transform-es2015-block-scoping",
       "transform-object-rest-spread",
       "transform-es3-member-expression-literals",
@@ -60,17 +59,28 @@
     "env": {
       "commonjs": {
         "plugins": [
-          ["transform-es2015-modules-commonjs", { "loose": true }]
+          [
+            "transform-es2015-modules-commonjs",
+            {
+              "loose": true
+            }
+          ]
         ]
       }
     }
   },
-  "dependencies": {
-    "ethjs-abi": "0.1.7",
-    "ethjs-filter": "0.1.5",
-    "js-sha3": "0.5.5",
-    "ethjs-util": "0.1.3"
+  "bugs": {
+    "url": "https://github.com/ethjs/ethjs-contract/issues"
   },
+  "bundleDependencies": false,
+  "dependencies": {
+    "ethjs-abi": "0.2.0",
+    "ethjs-filter": "0.1.7",
+    "ethjs-util": "0.1.3",
+    "js-sha3": "0.5.5"
+  },
+  "deprecated": false,
+  "description": "A simple contract object for the Ethereum RPC.",
   "devDependencies": {
     "babel-cli": "6.18.0",
     "babel-core": "6.18.2",
@@ -110,7 +120,7 @@
     "eslint-plugin-react": "5.1.1",
     "ethereumjs-testrpc": "3.0.2",
     "ethjs-provider-http": "0.1.3",
-    "ethjs-query": "0.1.3",
+    "ethjs-query": "0.3.4",
     "eventsource-polyfill": "0.9.6",
     "istanbul": "0.4.5",
     "json-loader": "0.5.4",
@@ -121,22 +131,8 @@
     "webpack": "2.1.0-beta.15"
   },
   "engines": {
-    "npm": ">=3",
-    "node": ">=6.5.0"
-  },
-  "keywords": [
-    "ethereum",
-    "events",
-    "rpc"
-  ],
-  "author": "Nick Dodson <nick.dodson@consensys.net>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/ethjs/ethjs-contract/issues"
-  },
-  "homepage": "https://github.com/ethjs/ethjs-contract#readme",
-  "lint-staged": {
-    "lint:eslint": "*.js"
+    "node": ">=6.5.0",
+    "npm": ">=3"
   },
   "eslintConfig": {
     "parser": "babel-eslint",
@@ -174,5 +170,49 @@
       ]
     }
   },
-  "pre-commit": "build"
+  "files": [
+    "dist",
+    "internals",
+    "lib",
+    "src"
+  ],
+  "homepage": "https://github.com/ethjs/ethjs-contract#readme",
+  "keywords": [
+    "ethereum",
+    "events",
+    "rpc"
+  ],
+  "license": "MIT",
+  "lint-staged": {
+    "lint:eslint": "*.js"
+  },
+  "main": "lib/index.js",
+  "name": "ethjs-contract",
+  "pre-commit": "build",
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/ethjs/ethjs-contract.git"
+  },
+  "scripts": {
+    "build": "npm run build:commonjs && npm run test:lib && npm run build:umd && npm run build:umd:min",
+    "build:clean": "npm run test:clean && rimraf ./dist",
+    "build:commonjs": "cross-env BABEL_ENV=commonjs babel src --out-dir lib --copy-files",
+    "build:umd": "cross-env BABEL_ENV=commonjs NODE_ENV=development webpack --config ./internals/webpack/webpack.config.js ./lib/index.js --progress",
+    "build:umd:min": "cross-env BABEL_ENV=commonjs NODE_ENV=production webpack --config ./internals/webpack/webpack.config.js ./lib/index.js --progress",
+    "coveralls": "npm run test-travis && cat ./coverage/lcov.info | coveralls",
+    "lint": "npm run lint:js",
+    "lint:eslint": "eslint --ignore-path .gitignore --ignore-pattern **/**.min.js",
+    "lint:js": "npm run lint:eslint -- . ",
+    "lint:staged": "lint-staged",
+    "prebuild": "npm run build:clean && npm run test",
+    "prepublish": "npm run build",
+    "pretest": "npm run lint",
+    "release": "npmpub",
+    "start": "npm test",
+    "test": "mocha ./src/tests/**/*.js -R spec --timeout 2000000",
+    "test-travis": "node ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- src/tests/**/*.js -R spec --timeout 2000000",
+    "test:clean": "rimraf ./coverage",
+    "test:lib": "mocha ./lib/tests/**/*.js -R spec --timeout 2000000"
+  },
+  "version": "0.2.0"
 }
