test - rewrite + factor tests to use async/await for better readability

--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
   "deprecated": false,
   "description": "A simple contract object for the Ethereum RPC.",
   "devDependencies": {
+    "async": "^2.6.0",
     "babel-cli": "6.18.0",
     "babel-core": "6.18.2",
     "babel-eslint": "7.1.0",
@@ -112,7 +113,7 @@
     "check-es3-syntax-cli": "0.1.3",
     "coveralls": "2.11.9",
     "cross-env": "1.0.7",
-    "eslint": "2.10.1",
+    "eslint": "^3.19.0",
     "eslint-config-airbnb": "9.0.1",
     "eslint-import-resolver-webpack": "0.2.4",
     "eslint-plugin-import": "1.8.0",
@@ -120,8 +121,10 @@
     "eslint-plugin-react": "5.1.1",
     "ethereumjs-testrpc": "3.0.2",
     "ethjs-provider-http": "0.1.3",
-    "ethjs-query": "0.3.4",
+    "ethjs-query": "^0.3.6",
     "eventsource-polyfill": "0.9.6",
+    "ganache-core": "^2.1.0",
+    "hard-rejection": "^1.0.0",
     "istanbul": "0.4.5",
     "json-loader": "0.5.4",
     "lint-staged": "1.0.1",
