--- a/package.json
+++ b/package.json
@@ -54,7 +54,11 @@
       "transform-es2015-block-scoping",
       "transform-object-rest-spread",
       "transform-es3-member-expression-literals",
-      "transform-es3-property-literals"
+      "transform-es3-property-literals",
+      "transform-es3-property-literals",
+      "transform-async-to-generator",
+      "transform-regenerator",
+      "transform-runtime"
     ],
     "env": {
       "commonjs": {
@@ -88,6 +92,7 @@
     "babel-eslint": "7.1.0",
     "babel-loader": "6.2.8",
     "babel-plugin-check-es2015-constants": "6.8.0",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-es2015-arrow-functions": "6.8.0",
     "babel-plugin-transform-es2015-block-scoped-functions": "6.8.0",
     "babel-plugin-transform-es2015-block-scoping": "6.18.0",
@@ -106,8 +111,10 @@
     "babel-plugin-transform-es2015-template-literals": "6.8.0",
     "babel-plugin-transform-es2015-unicode-regex": "6.11.0",
     "babel-plugin-transform-es3-member-expression-literals": "6.5.0",
-    "babel-plugin-transform-es3-property-literals": "6.5.0",
+    "babel-plugin-transform-es3-property-literals": "^6.5.0",
     "babel-plugin-transform-object-rest-spread": "6.19.0",
+    "babel-plugin-transform-regenerator": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-register": "6.18.0",
     "chai": "3.5.0",
     "check-es3-syntax-cli": "0.1.3",
@@ -130,6 +137,7 @@
     "lint-staged": "1.0.1",
     "mocha": "3.1.2",
     "pre-commit": "1.1.3",
+    "promise-to-callback": "^1.0.0",
     "rimraf": "2.3.4",
     "webpack": "2.1.0-beta.15"
   },
